--- a/index.html
+++ b/index.html
@@ -10,16 +10,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="name-highlight">Rupa's</span> World</h1>
+            <h1><span class="violet-highlight">Rupa's</span> World</h1>
             <h3>World-class professional web dev</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, architecto! Laboriosam aspernatur officiis dolorum at dolores error tempora, ducimus totam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ratione?</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rupa-s-web-world-62a037215/">VISIT ME</a>
         </div>
         <div class="half-width">
-            <img src="images/profile1.png">
+            <img src="images/Rupa1.png">
         </div>
-        </section>    
-</body>
+        </section> 
+        <section class="dream-area">
+            <div class="half-width"> 
+                <img src="images/Rupa2.png">
+            </div>    
+            <div class="half-width">
+                <h2>Big Dream</h2>
+                <h3>Become World's No.1 Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, architecto! Laboriosam aspernatur officiis dolorum at dolores error tempora, ducimus totam.</p>
+
+                <a class="link-button" target="_blank" href="https://github.com/Rupawbdv">MY GITHUB</a>
+            </div>
+        </section>
+        <section class="experience-area">
+            <h2>Experiences</h2>
+            <div id="full-stack" class="half-width single-experience">
+                <h2>Full Stack Web Dev</h2>
+                <h3 class="violet-highlight">2021 - Present | Pro level Web Dev</h3> 
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+                
+            </div>
+            <div id="baby-web" class="half-width single-experience">
+                <h2>Baby Web Developer</h2>
+                <h3 class="violet-highlight">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </section>
+        <footer>
+            <p>© Rupa 2021, all rights reserved.</p>
+        </footer>
+</body>            
 </html>
